# bsdsensors

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  config.h.in  fan_control.h  fan_speed.h  main.cc  nuvoton_chip.cc  nuvoton_chip.h  nuvoton_chip_info.h  nuvoton_fan_control.cc  nuvoton_fan_control.h  nuvoton_fan_speed.cc  nuvoton_temp_sensor.cc  nuvoton_temp_sensor.h  nuvoton_volt_sensor.cc  nuvoton_volt_sensor.h  port_io.cc  port_io.h  status.h  super_io.cc  super_io.h  temp_sensor.h  util.h  volt_sensor.h
cmake/: FindGlog.cmake
include/: CMakeLists.txt  address.h  banked_io.h  chip.h  chip_info.h  dev_db.h  fan_control.h  fan_speed.h  fintek_chip.h  fintek_chip_info.h  fintek_fan.h  fintek_temp_sensor.h  fintek_volt_sensor.h  ite_chip.h  ite_chip_info.h  ite_fan_control.h  ite_fan_speed.h  ite_temp_sensor.h  ite_volt_sensor.h  microchip_chip.h  microchip_chip_info.h  nuvoton_chip.h  nuvoton_chip_info.h  nuvoton_fan_control.h  nuvoton_fan_speed.h  nuvoton_multi_sensor.h  nuvoton_temp_sensor.h  nuvoton_volt_sensor.h  port_io.h  status.h  super_io.h  temp_sensor.h  util.h  value_util.h  volt_sensor.h
lib/: CMakeLists.txt  banked_io.cc  chip_info.cc  dev_db.cc  f71869a.cc  fintek_chip.cc  fintek_chip_info.cc  fintek_fan.cc  fintek_temp_sensor.cc  fintek_volt_sensor.cc  it8720f.cc  it8772.cc  it8772e.cc  ite_chip.cc  ite_chip_info.cc  ite_fan_control.cc  ite_fan_speed.cc  ite_temp_sensor.cc  ite_volt_sensor.cc  microchip_chip.cc  microchip_chip_info.cc  nct5532d.cc  nct5562d.cc  nct5569d.cc  nct6102d.cc  nct6627ud.cc  nct6686d.cc  nct6776f.cc  nct6779d.cc  nct6791d.cc  nct6793d.cc  nct6796d.cc  nct6799d.cc  nuvoton_chip.cc  nuvoton_chip_info.cc  nuvoton_fan_control.cc  nuvoton_fan_speed.cc  nuvoton_multi_sensor.cc  nuvoton_temp_sensor.cc  nuvoton_volt_sensor.cc  (+13 more)
proto/: CMakeLists.txt  fan_control.proto  fan_speed.proto  nuvoton_fan_control.proto  request.proto  sensors.proto  temperature.proto  testdata.proto  voltage.proto
src/: main.cc
testdata/: nct6796d_in.pb.txt  nct6796d_sensors.pb.txt  nct6799d_in.pb.txt  nct6799d_sensors.pb.txt  w83627hgaw_in.pb.txt  w83627hgaw_sensors.pb.txt  w83667hg_p5q_in.pb.txt  w83667hg_p5q_sensors.pb.txt  w83667hg_p6t_se_in.pb.txt  w83667hg_p6t_se_sensors.pb.txt
tests/: CMakeLists.txt  fake_port_io.cc  fake_port_io.h  nuvoton_test.cc  nuvoton_test.h  test_main.cc  test_util.cc  test_util.h  w83627hgaw_test.cc
